--- a/codeMaster/codemasterdashboard/index.html
+++ b/codeMaster/codemasterdashboard/index.html
@@ -39,13 +39,13 @@
       </main>
 
       <div class="ellipse-parent">
-        <input class="group-item" type="radio" />
+        <input class="group-item" type="radio name="group-item" />
 
-        <input class="group-inner" type="radio" />
+        <input class="group-inner" type="radio name="group-item" />
 
-        <input class="ellipse-input" type="radio" />
+        <input class="ellipse-input" type="radio name="group-item" />
 
-        <input class="group-child1" type="radio" />
+        <input class="group-child1" type="radio name="group-item" />
       </div>
 
     </section>
