--- a/Code Master/codemasterdashboard/index.html
+++ b/Code Master/codemasterdashboard/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="initial-scale=1, width=device-width" />
 
-  
+
   <link rel="stylesheet" href="./index.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Krona One:wght@400&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=K2D:wght@400;500&display=swap" />
@@ -56,17 +56,29 @@
 
       <nav class="rectangle-nav"></nav>
 
-      <button class="setting-line">
-        <img class="subtract-icon" alt="" src="./img/nav/Setting_line.png" />
-      </button>
+      <a href="../setting/desktop-12.html">
+        <button class="setting-line">
+          <img class="subtract-icon" alt="" src="./img/nav/Setting_line.png" />
+        </button>
+      </a>
 
-      <button class="gamepad">
-        <img class="rectangle-icon" alt="" src="./img/nav/Gamepad.png" />
-      </button>
 
-      <button class="vector-parent">
-        <img class="vector-icon1" alt="" src="./img/nav/Group 1 (1).png" />
-      </button>
+
+      <a href="../Question Practice/pracque.html">
+        <button class="gamepad">
+          <img class="rectangle-icon" alt="" src="./img/nav/Gamepad.png" />
+        </button>
+      </a>
+
+
+
+      <a href="../main page/leaderboard.html">
+        <button class="vector-parent">
+          <img class="vector-icon1" alt="" src="./img/nav/Group 1 (1).png" />
+        </button>
+      </a>
+
+
 
       <img class="mask-group-icon" alt="" src="./img/nav/mask-group@2x.png" />
     </nav>
@@ -75,18 +87,21 @@
 
 
     <div class="ellipse-group">
-      <img class="ellipse-icon" alt="" src="./img/profile/ellipse-2@2x.png" />
+
+      <a href="../main page/userprofile.html">
+        <img class="ellipse-icon" alt="" src="./img/profile/ellipse-2@2x.png" />
+      </a>
 
       <button class="bxsdown-arrow-wrapper">
         <img class="bxsdown-arrow-icon" alt="" src="./img/profile/bxs_down-arrow.png" />
       </button>
 
       <button class="group-parent">
-        <img class="group-icon" alt="" src="./img/profile/Group 49.png" /> 
+        <img class="group-icon" alt="" src="./img/profile/Group 49.png" />
       </button>
 
     </div>
-    
+
 
 
     <div class="rectangle-container">
@@ -120,7 +135,7 @@
 
 
       <div class="javascript-group">
-        <button class="javascript1"input type="checkbox">
+        <button class="javascript1" input type="checkbox">
           <img class="group-icon" alt="" src="./img/icons/HASH.png" />
         </button>
 
@@ -191,17 +206,17 @@
         <button class="javascript18">
           <img class="group-icon" alt="" src="./img/icons/kotlin.png" />
         </button>
-        
+
       </div>
     </div>
   </div>
 
 
-
-  <button class="button">
-    <div class="create-account">Save my training preference</div>
-  </button>
-
+  <a href="../question-arena/index.html">
+    <button class="button">
+      <div class="create-account">Save my training preference</div>
+    </button>
+  </a>
 
 
 
