--- a/Code Master/main page/leaderboard.html
+++ b/Code Master/main page/leaderboard.html
@@ -15,11 +15,12 @@
     <main>
         <div class="page1">
             <div class="left-rectangle">
-                <img id="logo" src="./profileimg/Vector 312.png" alt="">
+                <a href="../codemasterdashboard/index.html">
+                    <img id="logo" src="./profileimg/Vector 312.png" alt=""></a>
                 <div class="icons">
-                    <img src="./profileimg/Gamepad.png" alt="">
-                    <img src="./profileimg/Group 61.png" alt="">
-                    <img src="./profileimg/Setting_line.png" alt="">
+                    <a href="../Question Practice/pracque.html"> <img src="./profileimg/Gamepad.png" alt=""></a>
+                    <a href="../main page/leaderboard.html"> <img src="./profileimg/Group 61.png" alt=""> </a>
+                    <a href="../setting/desktop-12.html"> <img src="./profileimg/Setting_line.png" alt=""></a>
                 </div>
             </div>
             <div class="right-rectangle"></div>
@@ -50,7 +51,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="scores"><p>152 tables</p> <h5>1,323</h5></div>
+                        <div class="scores">
+                            <p>152 tables</p>
+                            <h5>1,323</h5>
+                        </div>
                     </div>
                     <div class="user-rank"><img src="./profileimg/first medal.png" alt="">
                         <div class="bio">
@@ -61,7 +65,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="scores"><p>152 tables</p> <h5>1,323</h5></div>
+                        <div class="scores">
+                            <p>152 tables</p>
+                            <h5>1,323</h5>
+                        </div>
                     </div>
                     <div class="user-rank"><img src="./profileimg/first medal.png" alt="">
                         <div class="bio">
@@ -72,101 +79,147 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="scores"><p>152 tables</p> <h5>1,323</h5></div>
+                        <div class="scores">
+                            <p>152 tables</p>
+                            <h5>1,323</h5>
+                        </div>
                     </div>
-                    <div class="user-rank"><h2 id="Rank">4    </h2>
+                    <div class="user-rank">
+                        <h2 id="Rank">4 </h2>
                         <div class="bio">
-                            <div class="align" > <img id="runnerup" src="./images/reviewer profile.png" alt="">
+                            <div class="align"> <img id="runnerup" src="./images/reviewer profile.png" alt="">
                                 <div class="same">
                                     <h5>Jon Snow</h5>
                                     <p>new User</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="scores"><p>152 tables</p> <h5>1,323</h5></div>
+                        <div class="scores">
+                            <p>152 tables</p>
+                            <h5>1,323</h5>
+                        </div>
                     </div>
-                    <div class="user-rank"><h2 id="Rank">5    </h2>
+                    <div class="user-rank">
+                        <h2 id="Rank">5 </h2>
                         <div class="bio">
-                            <div class="align" > <img id="runnerup" src="./images/reviewer profile.png" alt="">
+                            <div class="align"> <img id="runnerup" src="./images/reviewer profile.png" alt="">
                                 <div class="same">
                                     <h5>Jon Snow</h5>
                                     <p>new User</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="scores"><p>152 tables</p> <h5>1,323</h5></div>
-                    </div><div class="user-rank"><h2 id="Rank">6    </h2>
-                        <div class="bio">
-                            <div class="align" > <img id="runnerup" src="./images/reviewer profile.png" alt="">
-                                <div class="same">
-                                    <h5>Jon Snow</h5>
-                                    <p>new User</p>
-                                </div>
-                            </div>
+                        <div class="scores">
+                            <p>152 tables</p>
+                            <h5>1,323</h5>
                         </div>
-                        <div class="scores"><p>152 tables</p> <h5>1,323</h5></div>
-                    </div><div class="user-rank"><h2 id="Rank">7    </h2>
-                        <div class="bio">
-                            <div class="align" > <img id="runnerup" src="./images/reviewer profile.png" alt="">
-                                <div class="same">
-                                    <h5>Jon Snow</h5>
-                                    <p>new User</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="scores"><p>152 tables</p> <h5>1,323</h5></div>
-                    </div><div class="user-rank"><h2 id="Rank">8   </h2>
-                        <div class="bio">
-                            <div class="align" > <img id="runnerup" src="./images/reviewer profile.png" alt="">
-                                <div class="same">
-                                    <h5>Jon Snow</h5>
-                                    <p>new User</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="scores"><p>152 tables</p> <h5>1,323</h5></div>
-                    </div><div class="user-rank"><h2 id="Rank">9    </h2>
-                        <div class="bio">
-                            <div class="align" > <img id="runnerup" src="./images/reviewer profile.png" alt="">
-                                <div class="same">
-                                    <h5>Jon Snow</h5>
-                                    <p>new User</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="scores"><p>152 tables</p> <h5>1,323</h5></div>
-                    </div><div class="user-rank"><h2 id="Rank">10    </h2>
-                        <div class="bio">
-                            <div class="align" > <img id="runnerup" src="./images/reviewer profile.png" alt="">
-                                <div class="same">
-                                    <h5>Jon Snow</h5>
-                                    <p>new User</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="scores"><p>152 tables</p> <h5>1,323</h5></div>
-                    </div><div class="user-rank"><h2 id="Rank">11    </h2>
-                        <div class="bio">
-                            <div class="align" > <img id="runnerup" src="./images/reviewer profile.png" alt="">
-                                <div class="same">
-                                    <h5>Jon Snow</h5>
-                                    <p>new User</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="scores"><p>152 tables</p> <h5>1,323</h5></div>
-                    </div><div class="user-rank"><h2 id="Rank">12   </h2>
-                        <div class="bio">
-                            <div class="align" > <img id="runnerup" src="./images/reviewer profile.png" alt="">
-                                <div class="same">
-                                    <h5>Jon Snow</h5>
-                                    <p>new User</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="scores"><p>152 tables</p> <h5>1,323</h5></div>
                     </div>
-                    
+                    <div class="user-rank">
+                        <h2 id="Rank">6 </h2>
+                        <div class="bio">
+                            <div class="align"> <img id="runnerup" src="./images/reviewer profile.png" alt="">
+                                <div class="same">
+                                    <h5>Jon Snow</h5>
+                                    <p>new User</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="scores">
+                            <p>152 tables</p>
+                            <h5>1,323</h5>
+                        </div>
+                    </div>
+                    <div class="user-rank">
+                        <h2 id="Rank">7 </h2>
+                        <div class="bio">
+                            <div class="align"> <img id="runnerup" src="./images/reviewer profile.png" alt="">
+                                <div class="same">
+                                    <h5>Jon Snow</h5>
+                                    <p>new User</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="scores">
+                            <p>152 tables</p>
+                            <h5>1,323</h5>
+                        </div>
+                    </div>
+                    <div class="user-rank">
+                        <h2 id="Rank">8 </h2>
+                        <div class="bio">
+                            <div class="align"> <img id="runnerup" src="./images/reviewer profile.png" alt="">
+                                <div class="same">
+                                    <h5>Jon Snow</h5>
+                                    <p>new User</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="scores">
+                            <p>152 tables</p>
+                            <h5>1,323</h5>
+                        </div>
+                    </div>
+                    <div class="user-rank">
+                        <h2 id="Rank">9 </h2>
+                        <div class="bio">
+                            <div class="align"> <img id="runnerup" src="./images/reviewer profile.png" alt="">
+                                <div class="same">
+                                    <h5>Jon Snow</h5>
+                                    <p>new User</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="scores">
+                            <p>152 tables</p>
+                            <h5>1,323</h5>
+                        </div>
+                    </div>
+                    <div class="user-rank">
+                        <h2 id="Rank">10 </h2>
+                        <div class="bio">
+                            <div class="align"> <img id="runnerup" src="./images/reviewer profile.png" alt="">
+                                <div class="same">
+                                    <h5>Jon Snow</h5>
+                                    <p>new User</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="scores">
+                            <p>152 tables</p>
+                            <h5>1,323</h5>
+                        </div>
+                    </div>
+                    <div class="user-rank">
+                        <h2 id="Rank">11 </h2>
+                        <div class="bio">
+                            <div class="align"> <img id="runnerup" src="./images/reviewer profile.png" alt="">
+                                <div class="same">
+                                    <h5>Jon Snow</h5>
+                                    <p>new User</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="scores">
+                            <p>152 tables</p>
+                            <h5>1,323</h5>
+                        </div>
+                    </div>
+                    <div class="user-rank">
+                        <h2 id="Rank">12 </h2>
+                        <div class="bio">
+                            <div class="align"> <img id="runnerup" src="./images/reviewer profile.png" alt="">
+                                <div class="same">
+                                    <h5>Jon Snow</h5>
+                                    <p>new User</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="scores">
+                            <p>152 tables</p>
+                            <h5>1,323</h5>
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
