--- a/Code Master/setting/desktop-12.html
+++ b/Code Master/setting/desktop-12.html
@@ -44,13 +44,13 @@
         <div class="peloton1">Peloton</div>
       </div>
       <div class="socials">
-        <img class="facebook-icon1" alt="" src="./public/facebook.svg" />
+        <img class="facebook-icon1" alt="" src="./imagess/facebook.png" />
 
-        <img class="instagram-icon1" alt="" src="./public/instagram.svg" />
+        <img class="instagram-icon1" alt="" src="./imagess/instagram.png" />
 
-        <img class="twitter-icon1" alt="" src="./public/twitter.svg" />
+        <img class="twitter-icon1" alt="" src="./imagess/twitter.png" />
 
-        <img class="youtube-icon1" alt="" src="./public/youtube.svg" />
+        <img class="youtube-icon1" alt="" src="./imagess/youtube.png" />
       </div>
     </div>
     <div class="account-settings1">Account settings</div>
@@ -159,9 +159,12 @@
         </div>
       </div>
     </section>
+    <a href="../setting/desktop-12.html">
     <button class="setting-line2">
       <img class="subtract-icon2" alt="" src="./imagess/subtract.png" />
     </button>
+  </a>
+  <a href="../Question Practice/pracque.html">
     <button class="gamepad2">
       <div class="gamepad-child7"></div>
       <div class="gamepad-child8"></div>
@@ -171,6 +174,8 @@
 
       <img class="gamepad-child12" alt="" src="./imagess/rectangle-3967.png" />
     </button>
+  </a>
+  <a href="../main page/leaderboard.html">
     <button class="group-button">
       <img class="vector-icon3" alt="" src="./imagess/vector.png" />
 
@@ -181,10 +186,13 @@
       <div class="group-child9"></div>
       <div class="group-child10"></div>
     </button>
-    <img class="mask-group-icon2" alt="" src="./public/mask-group@2x.png" />
-
-    <a class="group-a">
-      <img class="ellipse-icon" alt="" src="./public/ellipse-2@2x.png" />
+  </a>
+  <a href="../codemasterdashboard/index.html">
+    <img class="mask-group-icon2" alt="" src="./imagess/mask-group@2x.png" />
+  </a>
+    <a class="group-a" href="../main page/userprofile.html">
+      
+      <img class="ellipse-icon" alt="" src="./imagess/ellipse-2@2x.png"  />
 
       <img class="group-child11" alt="" src="./imagess/group-3.png" />
     </a>
