--- a/Code Master/main page/updtlogin.html
+++ b/Code Master/main page/updtlogin.html
@@ -49,8 +49,10 @@
                 <label><input type="checkbox">Remember Me</label>
                 <a href="#">Forgot Password?</a>
             </div>
+            <a href="../codemasterdashboard/index.html">
             <button type="submit" class="btn">SIGN IN</button>
             <div class="register">
+            </a>
                 <p><a href="updtsignup.html">Sign up</a> if you don't have an account yet!</p>
             </div>
 
