--- a/Code Master/main page/userprofile.html
+++ b/Code Master/main page/userprofile.html
@@ -9,11 +9,11 @@
 <body>
     <main>
         <div class="left-rectangle">
-            <img id="logo" src="./profileimg/Vector 312.png" alt="">
+            <a href="../codemasterdashboard/"><img id="logo" src="./profileimg/Vector 312.png" alt=""></a>
             <div class="icons">
-                <img src="./profileimg/Gamepad.png" alt="">
-            <img src="./profileimg/Group 61.png" alt="">
-            <img src="./profileimg/Setting_line.png" alt="">
+                <a href="../Question Practice/pracque.html"><img src="./profileimg/Gamepad.png" alt=""></a>
+           <a href="../main page/leaderboard.html"><img src="./profileimg/Group 61.png" alt=""></a>
+           <a href="../setting/desktop-12.html"> <img src="./profileimg/Setting_line.png" alt=""></a>
             </div>
             
         </div>
